deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Thu Nov 28 11:22:18 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello10war
  name: hello10war
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello10war
  template:
    metadata:
      labels:
        app: hello10war
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: hello10war
          ports:
            - containerPort: 9080
              protocol: TCP
