deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Thu Nov 28 11:22:18 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello10war
  name: hello10war
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: hello10war
