deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Thu Nov 28 11:22:18 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello10war
  name: hello10war
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: hello10war
    weight: 100
